# ProjectManager

./: AutoCalender.cpp  AutoCalender.h  CMakeLists.txt  Project.cpp  Project.h  README.md  README.txt  aboutwidget.cpp  aboutwidget.h  aboutwidget.ui  file.h  filterwidget.cpp  filterwidget.h  filterwidget.ui  icons.qrc  main.cpp  manager.cpp  manager.h  manager.ui  resource.rc  ui_aboutwidget.h  ui_filterwidget.h  ui_manager.h
